conncted mongodb, use data from mongodb in models

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: 
       context: ./server
       dockerfile: Dockerfile
+    depends_on: 
+      - mongo
     ports:
       - 8080:8080
   mongo:
