--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - mongo
     ports:
       - 8080:8080
+    environment:
+      DB_HOST: mongo
   client:
     build:
       context: ./client
