--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 8080:8080
     environment:
-      DB_HOST: mongo
+      MONGO_HOST: mongo
   client:
     build:
       context: ./client
