--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - 8080:8080
     environment:
       MONGO_HOST: mongo
+      HOST: ""
   client:
     build:
       context: ./client
